# g2os

./: .gitignore  CMakeLists.txt  README.md
cmake/toolchains/: arm-cortex-m3.toolchain.cmake
linker/: lm3s6965evb.ld
src/: CMakeLists.txt  boot.c  main.c
src/system/: CMakeLists.txt  libc_bindings.c  startup.c
